--- a/EmployeePayrollMVC/Views/Employee/UpdateEmployee.cshtml
+++ b/EmployeePayrollMVC/Views/Employee/UpdateEmployee.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ModelLayer.EmployeeModel
 
 @{
-    ViewData["Title"] = "AddEmployee";
+    ViewData["Title"] = "UpdateEmployee";
 }
 
 <div class="header-content header">
@@ -14,17 +14,19 @@
     </div>
 </div>
 
+<h1>UpdateEmployee</h1>
+
+<h4>EmployeeModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        @*<div class="form-head">Employee Payroll Form</div>*@
-        <form asp-action="AddEmployee">
+        <form asp-action="UpdateEmployee">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="EmployeeId" class="control-label"></label>
                 <input asp-for="EmployeeId" class="form-control" />
                 <span asp-validation-for="EmployeeId" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -44,7 +46,6 @@
                 </div>
                 <span asp-validation-for="ProfileImage" class="text-danger"></span>
             </div>
-       
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <div class="genderSection">
@@ -55,7 +56,6 @@
                 </div>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Department" class="control-label"></label>
                 <input asp-for="Department" class="form-control" />
@@ -73,19 +73,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
-                <input asp-for="Notes" class="form-control" placeholder="Notes..." style="height:100px" />
+                <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-              
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="ListOfEmployee">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
