--- a/EmployeePayrollMVC/Views/Employee/DeleteEmployee.cshtml
+++ b/EmployeePayrollMVC/Views/Employee/DeleteEmployee.cshtml
@@ -14,11 +14,8 @@
     </div>
 </div>
 
-<h1>DeleteEmployee</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h6>Are you sure you want to delete this?</h6>
 <div>
-    <h4>EmployeeModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -73,6 +70,6 @@
     
     <form asp-action="DeleteEmployee">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ListOfEmployee">Back to List</a>
     </form>
 </div>
