--- a/EmployeePayrollMVC/Views/Employee/ListOfEmployee.cshtml
+++ b/EmployeePayrollMVC/Views/Employee/ListOfEmployee.cshtml
@@ -67,7 +67,7 @@
                 @Html.DisplayFor(modelItem => item.Notes)
             </td>
             <td>
-                @Html.ActionLink("Edit", "UpdateEmployee", new {  id=item.EmployeeId  }, new {@class = "btn btn-primary btn-sm"}) |
+                @Html.ActionLink("Update", "UpdateEmployee", new {  id=item.EmployeeId  }, new {@class = "btn btn-primary btn-sm"}) | 
                 @Html.ActionLink("Delete", "DeleteEmployee", new { id=item.EmployeeId }, new {@class = "btn btn-primary btn-sm"})
             </td>
         </tr>
